@@ -28,6 +28,7 @@ depth: 1
 ### Bug fixes
 
  * Ensure that StreamField's `FieldBlock`s correctly set the `required` and `aria-describedby` attributes (Storm Heg)
+ * Avoid an error when the moderation panel (admin dashboard) contains both snippets and private pages (Matt Westcott)
 
 ### Documentation
 
