@@ -15,6 +15,7 @@ Changelog
  * Remove `wagtail.publish` log action on aliases when they are created from live source pages or the source page is published (Dan Braghis)
  * Remove `wagtail.unpublish` log action on aliases when source page is unpublished (Dan Braghis)
  * Fix: Ensure that StreamField's `FieldBlock`s correctly set the `required` and `aria-describedby` attributes (Storm Heg)
+ * Fix: Avoid an error when the moderation panel (admin dashboard) contains both snippets and private pages (Matt Westcott)
  * Docs: Document `WAGTAILADMIN_BASE_URL` on "Integrating Wagtail into a Django project" page (Shreshth Srivastava)
  * Docs: Replace incorrect screenshot for authors listing on tutorial (Shreshth Srivastava)
  * Maintenance: Fix snippet search test to work on non-fallback database backends (Matt Westcott)
